samples/_failures_safe/1761148940_b70cde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a54774d5.c: In function ‘main’:
./samples/SAFE/__tmp_a54774d5.c:154:5: error: expected identifier at end of input
  154 |     mat2.
      |     ^~~~
./samples/SAFE/__tmp_a54774d5.c:154:5: error: expected declaration or statement at end of input
